# Proyecto_BA

./: .gitignore  main.py  pyproject.toml
jobs/: jupyter_server_gpu.sh
notebooks/: augmented_data_preparation.ipynb  cleaning_data.ipynb  predict_food_delivery_time.ipynb  sentiment-analysis.ipynb  sentiment_analysis_reviews.ipynb
